# codes

./: CMakeLists.txt  SkippingSum.cpp  a.cpp  a.h  a.out  aa.cpp  coinChange.cpp
Practice/Practice/: Info.plist  Practice.cp  Practice.h  PracticePriv.h  PracticeTarget.xcconfig
Practice/Practice.xcodeproj/: project.pbxproj
Practice/Practice.xcodeproj/xcuserdata/mohit.rathi.xcuserdatad/xcschemes/: Practice.xcscheme  xcschememanagement.plist
Top Coder/: BirthdayOdds.cpp  Collision.cpp  DiceThrows.cpp  KawigiEdit.properties  SRM_648_div2_B.cpp  SRM_651_div2_B.cpp  a.out
Untitled.xcworkspace/xcshareddata/: Untitled.xccheckout
Untitled.xcworkspace/xcuserdata/mohit.rathi.xcuserdatad/: UserInterfaceState.xcuserstate
ad-hoc/: Chocolates.cpp  a.out  addSubtract.cpp  fastNFurious.cpp  mobileCon.cpp  newGameOfOz.cpp
algos/: a.out  areaOfPolygon.cpp  bitMagic.cpp  circleFromThreePoints  circleFromThreePoints.cpp  expectation.cpp  gcd.cpp  geometry  geometry.cpp  hungarian.cpp  inverseModulo.cpp  line_intersection  line_intersection.cpp  nCr.cpp  nthFibonacciNo.cpp  polygonArea  polygonArea.cpp  power.cpp  reflection.cpp  segmentTreeToFindMinInARange.cpp  sufixTree.cpp  test
codechef/: CHEFCH.cpp  CHEFEQ.cpp  LEPAINT.cpp  PRGIFT.cpp  RANKLIST.cpp  STFM.cpp  a.cpp  a.out  b  b.cpp  b1.cpp  c.cpp  d.cpp
codechef/AUG2015/: ADMAG.cpp  CHINSM.cpp  COOKMACH.cpp  DCGAME.cpp  GRGUY.cpp  WOUT.cpp
codechef/JUNE15/: CBARG.cpp  CHPLGNS.cpp  CHSTR.cpp  CHSTR1.cpp  FRNDMTNG.cpp  STDYTAB.cpp  a.out
codechef/May2015/: CHAPD.cpp  CHEFCK.cpp  CHEFRP.cpp  DEVHAND.cpp  DEVSTR.cpp  SETDIFF.cpp  a.out
codechef/SNCK151A/: CHEFVOTE.cpp  DINING.cpp
codeforces/: 258_Div2_a.cpp  258_Div2_b.cpp  258_Div2_c.cpp  259_div2_a.cpp  259_div2_b.cpp  259_div2_c.cpp  a.out
codejam/: A_2015.cpp  B_2015.cpp  Dijkstra.cpp  Infinite-House-of-Pancakes-large.cpp  Infinite-House-of-Pancakes.cpp  Ominous-Omino.cpp  Standing_Ovation.cpp  a.out  output  output1
codejam/round_C_2015/: A-small-attempt0 (2).in  C-large.in  C-small-attempt0 (1).in  C-small-attempt1.in  a.out  a_out  b.cpp  c_small_out
hackerearth/: Jumps.cpp  maxOfTwo.cpp  nextTallerBuilding.cpp  power-of-two-4.cpp  sprial.cpp  zoomcar1.cpp
matrix code/: homo.cpp  matrix add.cpp  matrix inverse.cpp  matrix sub.cpp  matrix_mul.cpp
matrix_code/: matrix transpose.cpp  matrix_inverse.cpp
ola/: interleavings.cpp  permutations.cpp  qus2.cpp  sameLevelNodes.cpp  transformTree.cpp
sgu/: 407.cpp  a.out
spoj codes/: ABCPATH1.cpp  ABSURD.cpp  ABSYS.cpp  ACPC10D_1.cpp  ACPC11A.cpp  ACTIV.cpp  ACTIV1.cpp  ADUN.cpp  ADV04B1._1.cpp  ADV04B1.cpp  ADV04J.cpp  AE1B.cpp  AE2B.cpp  AIBOHP.cpp  ALLIZWELL.cpp  AMR10F.cpp  AMR10G_1.cpp  AMR11A_1.cpp  ANARC05B.cpp  ANARC05H.cpp  ANARC09B.cpp  ARITHSEQ.cpp  ASSIST.cpp  AVION1.cpp  BABTWR.cpp  BEENUMS.cpp  BENEFACT.cpp  BIT_2D.cpp  BLINNET.cpp  BOMB2.cpp  BRIDGE.cpp  BRIDGE_github.cpp  BTCODE_D.cpp  BUGLIFE.cpp  BUREAU1.cpp  BUSYMAN.cpp  BYTEST2.cpp  C1LJUTNJ1.cpp  CANDY3_1.cpp  CANTON.cpp  (+169 more)
spoj_codes/: ABCD.cpp  ABCPATH.cpp  ACPC10A.cpp  ACPC10B.cpp  ACPC10D.cpp  ACPC11B.cpp  ACTIV2.cpp  AE2B._1.cpp  AFS.cpp  AIBOPH.cpp  ALCHE.cpp  ALIEN.cpp  ALL.cpp  AMBM.cpp  AMR10G.cpp  ANARC05H_1.cpp  ARDA1.cpp  ARM11A.cpp  ARMY.cpp  ASSIST_1.cpp  BABY.cpp  BAISED.cpp  BAISED1.cpp  BANDW.cpp  BC.cpp  BEANGAME.cpp  BINSTIRL.cpp  BISHOPS.cpp  BISHOPS1.cpp  BIT_1D.cpp  BOOKS1.cpp  BOTTOM.cpp  BOTTOM_github.cpp  BOWLING1.cpp  BRACKTS.cpp  BRCKTS2.cpp  BRTREE.cpp  BUREAU.cpp  BUSYMAN1.cpp  BYECAKES.cpp  (+165 more)
test/: STFM.c  STFM.h
test/test/: a.cpp  a.h  main.cpp
test/test.xcodeproj/: project.pbxproj
test/test.xcodeproj/project.xcworkspace/xcshareddata/: test.xccheckout
test/test.xcodeproj/project.xcworkspace/xcuserdata/mohit.rathi.xcuserdatad/: UserInterfaceState.xcuserstate
test/test.xcodeproj/xcuserdata/mohit.rathi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
test/test.xcodeproj/xcuserdata/mohit.rathi.xcuserdatad/xcschemes/: test.xcscheme  xcschememanagement.plist
