cmake_minimum_required(VERSION 3.1)
project(codes)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    algos/circleFromThreePoints.cpp
    algos/expectation.cpp
    algos/geometry.cpp
    algos/line_intersection.cpp
    algos/nthFibonacciNo.cpp
    algos/polygonArea.cpp
    algos/reflection.cpp
    codechef/a.cpp
    codechef/b.cpp
    codechef/b1.cpp
    codechef/c.cpp
    codechef/CHEFCH.cpp
    codechef/CHEFEQ.cpp
    codechef/d.cpp
    codechef/LEPAINT.cpp
    codechef/LUCKG.cpp
    codechef/PRGIFT.cpp
    codechef/RANKLIST.cpp
    codechef/STFM.cpp
    codeforces/258_Div2_a.cpp
    codeforces/258_Div2_b.cpp
    codeforces/258_Div2_c.cpp
    codeforces/259_div2_a.cpp
    codeforces/259_div2_b.cpp
    codeforces/259_div2_c.cpp
    matrix_code/homo.cpp
    "matrix_code/matrix add.cpp"
    "matrix_code/matrix inverse.cpp"
    "matrix_code/matrix sub.cpp"
    "matrix_code/matrix transpose.cpp"
    matrix_code/matrix_inverse.cpp
    matrix_code/matrix_mul.cpp
    Practice/Practice/Practice.cp
    Practice/Practice/Practice.h
    Practice/Practice/PracticePriv.h
    sgu/407.cpp
    spoj_codes/a.cpp
    spoj_codes/ABCD.cpp
    spoj_codes/ABCPATH.cpp
    spoj_codes/ABCPATH1.cpp
    spoj_codes/ABSURD.cpp
    spoj_codes/ABSYS.cpp
    spoj_codes/ACPC10A.cpp
    spoj_codes/ACPC10B.cpp
    spoj_codes/ACPC10D.cpp
    spoj_codes/ACPC10D_1.cpp
    spoj_codes/ACPC11A.cpp
    spoj_codes/ACPC11B.cpp
    spoj_codes/ACTIV.cpp
    spoj_codes/ACTIV1.cpp
    spoj_codes/ACTIV2.cpp
    spoj_codes/ADUN.cpp
    spoj_codes/ADV04B1._1.cpp
    spoj_codes/ADV04B1.cpp
    spoj_codes/ADV04J.cpp
    spoj_codes/AE1B.cpp
    spoj_codes/AE2B._1.cpp
    spoj_codes/AE2B.cpp
    spoj_codes/AFS.cpp
    spoj_codes/AIBOHP.cpp
    spoj_codes/AIBOPH.cpp
    spoj_codes/ALCHE.cpp
    spoj_codes/ALIEN.cpp
    spoj_codes/ALL.cpp
    spoj_codes/ALLIZWELL.cpp
    spoj_codes/AMBM.cpp
    spoj_codes/AMR10F.cpp
    spoj_codes/AMR10G.cpp
    spoj_codes/AMR10G_1.cpp
    spoj_codes/AMR11A_1.cpp
    spoj_codes/ANARC05B.cpp
    spoj_codes/ANARC05H.cpp
    spoj_codes/ANARC05H_1.cpp
    spoj_codes/ANARC09B.cpp
    spoj_codes/ARDA1.cpp
    spoj_codes/ARITHSEQ.cpp
    spoj_codes/ARM11A.cpp
    spoj_codes/ARMY.cpp
    spoj_codes/arrangement.cpp
    spoj_codes/ASSIST.cpp
    spoj_codes/ASSIST_1.cpp
    spoj_codes/AVION1.cpp
    spoj_codes/BABTWR.cpp
    spoj_codes/BAISED.cpp
    spoj_codes/BAISED1.cpp
    spoj_codes/BANDW.cpp
    spoj_codes/BC.cpp
    spoj_codes/BEANGAME.cpp
    spoj_codes/BEENUMS.cpp
    spoj_codes/BENEFACT.cpp
    spoj_codes/BINSTIRL.cpp
    spoj_codes/BISHOPS.cpp
    spoj_codes/BISHOPS1.cpp
    spoj_codes/BIT_1D.cpp
    spoj_codes/BIT_2D.cpp
    spoj_codes/BLINNET.cpp
    spoj_codes/BOMB2.cpp
    spoj_codes/BOOKS1.cpp
    spoj_codes/BOTTOM.cpp
    spoj_codes/BOTTOM_github.cpp
    spoj_codes/BOWLING1.cpp
    spoj_codes/BRACKTS.cpp
    spoj_codes/BRCKTS2.cpp
    spoj_codes/BRIDGE.cpp
    spoj_codes/BRIDGE_github.cpp
    spoj_codes/BRTREE.cpp
    spoj_codes/BTCODE_D.cpp
    spoj_codes/BUGLIFE.cpp
    spoj_codes/BUREAU.cpp
    spoj_codes/BUREAU1.cpp
    spoj_codes/BUSYMAN.cpp
    spoj_codes/BUSYMAN1.cpp
    spoj_codes/BYECAKES.cpp
    spoj_codes/BYTESE1.cpp
    spoj_codes/BYTEST2.cpp
    spoj_codes/C1LJUTNJ.cpp
    spoj_codes/C1LJUTNJ1.cpp
    spoj_codes/CAM5.cpp
    spoj_codes/CANDY2.cpp
    spoj_codes/CANDY3.cpp
    spoj_codes/CANDY3_1.cpp
    spoj_codes/CANTON.cpp
    spoj_codes/CATM.cpp
    spoj_codes/CCHESS.cpp
    spoj_codes/CCOST.cpp
    spoj_codes/CERC07K.cpp
    spoj_codes/CERC07R.cpp
    spoj_codes/CF33C.cpp
    spoj_codes/CHICAGO.cpp
    spoj_codes/CHICAGO1.cpp
    spoj_codes/CHMAZE.cpp
    spoj_codes/CHMAZE1.cpp
    spoj_codes/CHMAZE_github.cpp
    spoj_codes/CIJEVI.cpp
    spoj_codes/CLEANRBT.cpp
    spoj_codes/CLONE.cpp
    spoj_codes/CNEASY.cpp
    spoj_codes/CODESPTB.cpp
    spoj_codes/COEF.cpp
    spoj_codes/COINS.cpp
    spoj_codes/COMDIV.cpp
    spoj_codes/COMDIV_1.cpp
    spoj_codes/CPRIME.cpp
    spoj_codes/CPRIME1.cpp
    spoj_codes/CPRIME2.cpp
    spoj_codes/CPRIME_3.cpp
    spoj_codes/CRSCNTRY.cpp
    spoj_codes/CRSCNTRY_1.cpp
    spoj_codes/CSTREET.cpp
    spoj_codes/CTRICK.cpp
    spoj_codes/CTRICK1.cpp
    spoj_codes/CUBARTWK.cpp
    spoj_codes/CUBEFR.cpp
    spoj_codes/CUBES.cpp
    spoj_codes/CYLINDER.cpp
    spoj_codes/DCEPC504.cpp
    spoj_codes/DEFKIN.cpp
    spoj_codes/DEFKIN_1.cpp
    spoj_codes/df.cpp
    spoj_codes/DIPOSIT.cpp
    spoj_codes/DISTANCE.cpp
    spoj_codes/DIV.cpp
    "spoj_codes/divisibility from 7.cpp"
    spoj_codes/DIVSUM.cpp
    spoj_codes/DONOTHNG.cpp
    spoj_codes/DQUERY.cpp
    spoj_codes/DQUERY_1.cpp
    spoj_codes/DRAWM.cpp
    spoj_codes/DRIRA.cpp
    spoj_codes/DSUBSEQ.cpp
    spoj_codes/EASYPROB.cpp
    spoj_codes/EBOXES.cpp
    spoj_codes/EGYPIZZA.cpp
    spoj_codes/EKO.cpp
    spoj_codes/EMP.cpp
    spoj_codes/EPALIN.cpp
    spoj_codes/EPALIN_1.cpp
    spoj_codes/ETF.cpp
    spoj_codes/ETF1.cpp
    spoj_codes/ETF2.cpp
    spoj_codes/EXFOR.cpp
    spoj_codes/FACT0.cpp
    spoj_codes/FACTCG2.cpp
    spoj_codes/FACTCG2_1.cpp
    spoj_codes/FACTCG2_2.cpp
    spoj_codes/FAKETSP.cpp
    spoj_codes/FAMILYP.cpp
    spoj_codes/FASHION.cpp
    spoj_codes/FASTFLOW.cpp
    spoj_codes/FAVDICE.cpp
    spoj_codes/FCTRL-2.cpp
    spoj_codes/FCTRL.cpp
    spoj_codes/FEELUCK.cpp
    spoj_codes/FENCE1.cpp
    spoj_codes/FIBFUNCH.cpp
    spoj_codes/FIBOSUM.cpp
    spoj_codes/FIBSUM.cpp
    spoj_codes/FISHER.cpp
    spoj_codes/FPOLICE.cpp
    spoj_codes/FREQ2.cpp
    spoj_codes/FREQUENT.cpp
    spoj_codes/FREQUENT_1.cpp
    spoj_codes/GERGOVIA.cpp
    spoj_codes/GIRLSNBS.cpp
    spoj_codes/GLJIVE.cpp
    spoj_codes/GNY07A.cpp
    spoj_codes/GNY07B.cpp
    spoj_codes/GNYR09F.cpp
    spoj_codes/GONDOR.cpp
    spoj_codes/GONESORT.cpp
    spoj_codes/GSS1.cpp
    spoj_codes/GSS1_1.cpp
    spoj_codes/GSS1_2.cpp
    spoj_codes/GSS3.cpp
    spoj_codes/GSS4.cpp
    spoj_codes/HANGOVER.cpp
    spoj_codes/HEAPULM.cpp
    spoj_codes/HERDING.cpp
    spoj_codes/HIGHWAYS.cpp
    spoj_codes/HORRIBLE.cpp
    spoj_codes/HOTELS.cpp
    spoj_codes/HPYNOSII.cpp
    spoj_codes/INCARDS.cpp
    spoj_codes/INVCNT.cpp
    spoj_codes/IOIPALIN.cpp
    spoj_codes/ITRIX_B.cpp
    spoj_codes/JAVAC.cpp
    spoj_codes/JH1.cpp
    spoj_codes/JH1_1.cpp
    spoj_codes/KAMIL.cpp
    spoj_codes/KGSS.cpp
    spoj_codes/KGSS1.cpp
    spoj_codes/KGSS2.cpp
    spoj_codes/KINDG.cpp
    spoj_codes/KMJUMPS.cpp
    spoj_codes/LABYR1.cpp
    spoj_codes/LABYR1_1.cpp
    spoj_codes/LASTDIG.cpp
    spoj_codes/LIFEGAME.cpp
    spoj_codes/LINES.cpp
    spoj_codes/LINES1.cpp
    spoj_codes/LISA.cpp
    spoj_codes/LISA1.cpp
    spoj_codes/LITE.cpp
    spoj_codes/LOCKER.cpp
    spoj_codes/log.cpp
    spoj_codes/LSORT.cpp
    spoj_codes/LSORT1.cpp
    spoj_codes/M00PAIR.cpp
    spoj_codes/MAIN113.cpp
    spoj_codes/MAIN12A.cpp
    spoj_codes/MAJOR.cpp
    spoj_codes/MAKEMAZE.cpp
    spoj_codes/MARBLES.cpp
    spoj_codes/MATSUM.cpp
    spoj_codes/MAXLN.cpp
    spoj_codes/MAYCA.cpp
    spoj_codes/MBEEWALK.cpp
    spoj_codes/MBLAST.cpp
    spoj_codes/MC.cpp
    spoj_codes/MCIRGAME.cpp
    spoj_codes/MCIRGAME1.cpp
    spoj_codes/MCIRGAME2.cpp
    spoj_codes/MDOLL.cpp
    spoj_codes/MELE3.cpp
    spoj_codes/MELE3_1.cpp
    spoj_codes/MENU.cpp
    spoj_codes/MFLAR10.cpp
    spoj_codes/MICEMAZE.cpp
    spoj_codes/MIDO.cpp
    spoj_codes/MIRRORED.cpp
    spoj_codes/MJLAR10.cpp
    spoj_codes/MKLABELS.cpp
    spoj_codes/MKLABELS_1.cpp
    spoj_codes/MKTHNUM.cpp
    spoj_codes/MKTHNUM1.cpp
    spoj_codes/MKTHNUM2.cpp
    spoj_codes/MLASERP.cpp
    spoj_codes/MPILOT.cpp
    spoj_codes/MPILOT_1.cpp
    spoj_codes/MPILOT_2.cpp
    spoj_codes/MROADS.cpp
    spoj_codes/MSE06H.cpp
    spoj_codes/MSE06H_1.cpp
    spoj_codes/MULTQ3.cpp
    spoj_codes/MUSKET.cpp
    spoj_codes/MUSKET1.cpp
    spoj_codes/NEG2.cpp
    spoj_codes/net_aman.cpp
    spoj_codes/NGM.cpp
    spoj_codes/NHAY.cpp
    spoj_codes/NOCHANGE.cpp
    spoj_codes/NOTATRI.cpp
    spoj_codes/NPRIME.cpp
    spoj_codes/NSYSTEM.cpp
    spoj_codes/NUMGUESS.cpp
    spoj_codes/NY10A.cpp
    spoj_codes/NY10B.cpp
    spoj_codes/NY10B_1.cpp
    spoj_codes/NY10E.cpp
    spoj_codes/OAE.cpp
    spoj_codes/OFFSIZE.cpp
    spoj_codes/ONEZERO.cpp
    spoj_codes/ONEZERO1.cpp
    spoj_codes/ONP.cpp
    spoj_codes/ORDERS.cpp
    spoj_codes/ORDERS_1.cpp
    spoj_codes/PA06ANT.cpp
    spoj_codes/PAGAIN.cpp
    spoj_codes/PAGAIN1.cpp
    spoj_codes/PAIRSUM.cpp
    spoj_codes/PAIRSUM_1.cpp
    spoj_codes/PALIN.cpp
    spoj_codes/PARKET.cpp
    spoj_codes/PARSUMS.cpp
    spoj_codes/PARTPALI.cpp
    spoj_codes/PARTY.cpp
    spoj_codes/PERMUT1.cpp
    spoj_codes/PERMUT1_1.cpp
    spoj_codes/PFDEP.cpp
    spoj_codes/PHIDIAS.cpp
    spoj_codes/pi.cpp
    spoj_codes/PIGBANK.cpp
    spoj_codes/PIVAL.cpp
    spoj_codes/PON.cpp
    spoj_codes/POTHOLE.cpp
    spoj_codes/POUR1.cpp
    spoj_codes/pow.cpp
    spoj_codes/power_fn.cpp
    spoj_codes/PRATA.cpp
    spoj_codes/PRATA_1.cpp
    spoj_codes/PRIC.cpp
    spoj_codes/PRIME1.cpp
    spoj_codes/prime_gen.cpp
    spoj_codes/PRISMSA.cpp
    spoj_codes/PROSCORE.cpp
    spoj_codes/PT07Y.cpp
    spoj_codes/PT07Z.cpp
    spoj_codes/PUCMM025.cpp
    spoj_codes/PUCMM210.cpp
    spoj_codes/PUCMM210_1.cpp
    spoj_codes/PYRA.cpp
    spoj_codes/QUADRATE.cpp
    spoj_codes/QUALITY.cpp
    spoj_codes/QUEST4.cpp
    spoj_codes/RATING.cpp
    "spoj_codes/rectangle perimeter.cpp"
    spoj_codes/RENT_1.cpp
    spoj_codes/RENY.cpp
    spoj_codes/ROADS.cpp
    spoj_codes/ROADS1.cpp
    spoj_codes/ROBBERY2.cpp
    spoj_codes/ROCK.cpp
    spoj_codes/ROOTCIPH.cpp
    spoj_codes/RRSCHDL.cpp
    spoj_codes/RRSCHDL1.cpp
    spoj_codes/SAMER08A.cpp
    spoj_codes/SAMER08A_1.cpp
    spoj_codes/SAMER08A_2.cpp
    spoj_codes/SAMER08D.cpp
    spoj_codes/SAMER08F.cpp
    spoj_codes/SBANK.cpp
    spoj_codes/SBETS.cpp
    spoj_codes/SCAVHUNT.cpp
    spoj_codes/SCUBADIV.cpp
    spoj_codes/segment_tree_min_max.cpp
    spoj_codes/SEGSQRSS.cpp
    spoj_codes/Seinfeld.cpp
    spoj_codes/SHOP.cpp
    spoj_codes/SHOP1.cpp
    spoj_codes/SHPATH.cpp
    spoj_codes/SHPATH1.cpp
    spoj_codes/sidbinstirl.cpp
    spoj_codes/SILVER.cpp
    spoj_codes/SIZECON.cpp
    spoj_codes/SOCIALNE.cpp
    spoj_codes/SOLDIER.cpp
    spoj_codes/SQRBR.cpp
    spoj_codes/STAMPS.cpp
    spoj_codes/STONE.cpp
    spoj_codes/STREET.cpp
    spoj_codes/STREETR.cpp
    spoj_codes/string_copy.cpp
    "spoj_codes/Strongly connected components.cpp"
    "spoj_codes/Strongly connected components_tarjan_algo.cpp"
    spoj_codes/SUM1.cpp
    spoj_codes/SUMFOUR.cpp
    spoj_codes/SUMITR.cpp
    spoj_codes/SUMUP.cpp
    spoj_codes/T3TILE.cpp
    spoj_codes/T4TILE.cpp
    spoj_codes/TEMPTIST.cpp
    spoj_codes/TETRAHED.cpp
    spoj_codes/THRBL.cpp
    spoj_codes/TOANDFRO.cpp
    spoj_codes/TOHU.cpp
    spoj_codes/TOHU2.cpp
    spoj_codes/TOPOLOGICAL-sort.cpp
    spoj_codes/TOUR.cpp
    spoj_codes/TOUR1.cpp
    spoj_codes/TOUR_github.cpp
    spoj_codes/TOURIST.cpp
    spoj_codes/TOURISTw.cpp
    spoj_codes/TRAFFICN.cpp
    spoj_codes/TRGRID.cpp
    spoj_codes/TRICOUNT.cpp
    spoj_codes/TRICOUNT_r.cpp
    spoj_codes/TRIKA.cpp
    spoj_codes/TRIKA1.cpp
    spoj_codes/TRT.cpp
    spoj_codes/TRT_1.cpp
    spoj_codes/TTTABLE.cpp
    spoj_codes/TUTMARB.cpp
    spoj_codes/TWENDS.cpp
    spoj_codes/TWENDS1.cpp
    spoj_codes/TWOSQRT.cpp
    spoj_codes/TWOSQRT1.cpp
    spoj_codes/TWOSQRT2.cpp
    spoj_codes/UPSUB.cpp
    spoj_codes/WAGE.cpp
    spoj_codes/WEIGHT.cpp
    spoj_codes/WEIGHT1.cpp
    spoj_codes/WILLITST.cpp
    spoj_codes/WINDVANE.cpp
    spoj_codes/WINDVANE_2D.cpp
    spoj_codes/WINDVANE_maaz.cpp
    spoj_codes/WORDCNT.cpp
    spoj_codes/WPC4F.cpp
    spoj_codes/WSCIPHER.cpp
    spoj_codes/WSCIPHER1.cpp
    spoj_codes/YODANESS.cpp
    spoj_codes/YODANESS_1.cpp
    spoj_codes/YODANESS_2.cpp
    spoj_codes/ZSUM.cpp
    test/test/a.cpp
    test/test/a.h
    test/test/main.cpp
    test/STFM.c
    test/STFM.h
    "Top Coder/SRM_648_div2_B.cpp"
    "Top Coder/SRM_651_div2_B.cpp"
    a.cpp
    a.h
    aa.cpp
    coinChange.cpp
    SkippingSum.cpp)

add_executable(codes ${SOURCE_FILES})